--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start-local": "cross-env NODE_ENV=local nodemon ./server/server.js",
     "start-atlas": "cross-env NODE_ENV=atlas nodemon ./server/server.js",
     "start-mlab": "cross-env NODE_ENV=mlab nodemon ./server/server.js",
+    "start": "cross-env NODE_ENV=mlab nodemon ./server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "cross-env NODE_ENV=local nodemon --exec npm test"
   },
